# olox

./: README.md  dune-project  olox.opam
lib/: ast.ml  dune  environment.ml  globals.ml  interpreter.ml  lexer.mll  olox.ml  parser.mly  scanner.ml  static_analysis.ml
test/: dune  go.ml  olox_test.ml
test/classes.t/: decl.lox  fields.lox  init.lox  methods.lox  return_from_init.lox  run.t  this_bound_methods.lox
test/control_flow.t/: if.lox  run.t  while.lox
test/functions.t/: add.lox  clock.lox  closure_dont_overwrite.lox  hi.lox  missing_arguments.lox  mutual_recursion.lox  return.lox  reuse_closure_slot.lox  run.t
test/scopes.t/: decl_scopes.lox  run.t  scopes.lox
test/static_analysis.t/: initialize_self.lox  run.t  toplevel_return.lox  unused_fun.lox
